added comments to few APIs