@@ -11,6 +11,7 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -42,8 +43,16 @@ public class BookServiceImpl implements BookService {
         List<Library> all = this.libraryRepository.findAll();
         Library library2 = all.stream().filter(library1 -> library1.getLibraryName().equals(library.trim())).findAny().get();
         book.setLibrary(library2);
-        return this.bookRepository.save(book);
+
+        Book save = this.bookRepository.save(book);
+        List<Book> availableBookList = this.bookRepository.findAll().stream().filter(book1 -> book1.getLibrary().equals(library2)).filter(book1 -> !book1.getIssued()).toList();
+        library2.setAvailableBooksCount((long) availableBookList.size());
+        List<Book> issuedBookList = this.bookRepository.findAll().stream().filter(book1 -> book1.getLibrary().equals(library2)).filter(book1 -> book1.getIssued()).toList();
+        library2.setIssuedBooksCount((long) issuedBookList.size());
+        this.libraryRepository.save(library2);
+        return save;
     }
+
 
     @Override
     public List<Book> getBooks(String customerId) {
@@ -61,17 +70,19 @@ public class BookServiceImpl implements BookService {
     }
 
     @Override
-    public IssueBookResponseDto issueBook(IssueBookRequestDto issueBookRequestDto) {
+    public IssueBookResponseDto issueBook(IssueBookRequestDto issueBookRequestDto, String library) {
         String customerId = issueBookRequestDto.getCustomerId();
         String bookName = issueBookRequestDto.getBookName();
         String author = issueBookRequestDto.getBookAuthor();
         String publisher = issueBookRequestDto.getBookPublisher();
         List<Book> all = this.bookRepository.findAll();
-        List<Book> collect = all.stream().filter(book -> !book.getIssued()).collect(Collectors.toList());
+        List<Book> collect = all.stream().filter(book -> !book.getIssued()).toList();
         List<Book> collect1 = collect.stream().filter(book -> book.getBookName().equals(bookName)).filter(book -> book.getBookAuthor().equals(author)).filter(book -> book.getPublisher().equals(publisher)).collect(Collectors.toList());
-        if (collect1 != null) {
+        Optional<Library> library2 = this.libraryRepository.findAll().stream().filter(lib -> lib.getLibraryName().equals(library)).findFirst();
+        if (collect1 != null && library2.isPresent()) {
             System.out.println(collect1);
             if (!collect1.isEmpty()) {
+                Library library1 = library2.get();
                 System.out.println(collect1);
                 Book book = collect1.get(0);
                 book.setCustomerId(customerId);
@@ -79,6 +90,11 @@ public class BookServiceImpl implements BookService {
                 book.setReturnDate(LocalDate.now().plusMonths(3));
                 book.setIssued(true);
                 this.bookRepository.save(book);
+                List<Book> availableBookList = this.bookRepository.findAll().stream().filter(book1 -> book1.getLibrary().equals(library1)).filter(book1 -> !book1.getIssued()).toList();
+                library1.setAvailableBooksCount((long) availableBookList.size());
+                List<Book> issuedBookList = this.bookRepository.findAll().stream().filter(book1 -> book1.getLibrary().equals(library1)).filter(Book::getIssued).toList();
+                library1.setIssuedBooksCount((long) issuedBookList.size());
+                this.libraryRepository.save(library1);
                 IssueBookResponseDto issueBookResponseDto = new IssueBookResponseDto();
                 issueBookResponseDto.setIssuedBookName(book.getBookName());
                 issueBookResponseDto.setMessage("Book issued successfully");
@@ -93,30 +109,39 @@ public class BookServiceImpl implements BookService {
     }
 
     @Override
-    public ReturnBookResponseDto returnIssuedBook(ReturnBookRequestDto returnBookRequestDto) {
-        List<Book> all = this.bookRepository.findAll();
-        all.stream().filter(book -> book.getCustomerId().equals(returnBookRequestDto.getCustomerId()));
-        boolean b = all.stream().map(book -> book.getBookName()).collect(Collectors.toList()).stream().anyMatch(s -> s.equals(returnBookRequestDto.getBookName()));
-        if (b == true) {
-            Book book1 = all.stream().filter(book -> book.getCustomerId() != null).filter(book -> book.getCustomerId().equals(returnBookRequestDto.getCustomerId())).findAny().orElse(null);
-            if (Objects.nonNull(book1)) {
-                book1.setIssued(false);
-                book1.setReturnDate(null);
-                book1.setIssuedDate(null);
-                book1.setCustomerId(null);
-                this.bookRepository.save(book1);
-                ReturnBookResponseDto returnBookResponseDto = new ReturnBookResponseDto();
-                returnBookResponseDto.setBookName(book1.getBookName());
-                returnBookResponseDto.setMessage("Book returned successfully");
-                returnBookResponseDto.setBookConditionCheck("Passed");
-                returnBookResponseDto.setLateFee(0d);
-                returnBookResponseDto.setTotalOutstanding(bookServiceUtil.getCustomerOutstanding(returnBookRequestDto.getCustomerId()));
-                return returnBookResponseDto;
+    public ReturnBookResponseDto returnIssuedBook(ReturnBookRequestDto returnBookRequestDto, String library) {
+        Optional<Library> library2 = this.libraryRepository.findAll().stream().filter(lib -> lib.getLibraryName().equals(library)).findFirst();
+        if (library2.isPresent()) {
+            Library library1 = library2.get();
+            List<Book> all = this.bookRepository.findAll();
+            all.stream().filter(book -> book.getCustomerId().equals(returnBookRequestDto.getCustomerId()));
+            boolean b = all.stream().map(book -> book.getBookName()).collect(Collectors.toList()).stream().anyMatch(s -> s.equals(returnBookRequestDto.getBookName()));
+            if (b == true) {
+                Book book1 = all.stream().filter(book -> book.getCustomerId() != null).filter(book -> book.getCustomerId().equals(returnBookRequestDto.getCustomerId())).findAny().orElse(null);
+                if (Objects.nonNull(book1)) {
+                    book1.setIssued(false);
+                    book1.setReturnDate(null);
+                    book1.setIssuedDate(null);
+                    book1.setCustomerId(null);
+                    this.bookRepository.save(book1);
+                    List<Book> availableBookList = this.bookRepository.findAll().stream().filter(book2 -> book2.getLibrary().equals(library1)).filter(book2 -> !book2.getIssued()).toList();
+                    library1.setAvailableBooksCount((long) availableBookList.size());
+                    List<Book> issuedBookList = this.bookRepository.findAll().stream().filter(book2 -> book2.getLibrary().equals(library1)).filter(Book::getIssued).toList();
+                    library1.setIssuedBooksCount((long) issuedBookList.size());
+                    this.libraryRepository.save(library1);
+                    ReturnBookResponseDto returnBookResponseDto = new ReturnBookResponseDto();
+                    returnBookResponseDto.setBookName(book1.getBookName());
+                    returnBookResponseDto.setMessage("Book returned successfully");
+                    returnBookResponseDto.setBookConditionCheck("Passed");
+                    returnBookResponseDto.setLateFee(0d);
+                    returnBookResponseDto.setTotalOutstanding(bookServiceUtil.getCustomerOutstanding(returnBookRequestDto.getCustomerId()));
+                    return returnBookResponseDto;
+                }
             }
+            return null;
         }
         return null;
     }
-
     @Override
     public List<Book> getIssuedBookList() {
         return this.bookRepository.findAll().stream().filter(book -> book.getIssued()).collect(Collectors.toList());
